Refactor project name from DuckKode to CodeResQ, update related identifiers, and enhance code lens titles with emojis for better visibility.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "DuckKode",
-	"displayName": "DuckKode",
+	"name": "CodeResQ",
+	"displayName": "CodeResQ",
 	"description": "Protecting your code from vulnerabilities and bugs.",
 	"version": "0.0.2",
 	"publisher": "Nalayak",
@@ -18,7 +18,7 @@
 		"commands": [
 			{
 				"command": "crq.crq",
-				"title": "DuckKode"
+				"title": "CodeResQ"
 			}
 		]
 	},
